# project_thegame

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/actor/: actor.hpp  actorcamera.hpp  actorcharacter.hpp  actorcomponent.hpp  actorscenario.hpp  cameraactor.hpp  combatcomponent.hpp  controllercomponent.hpp  drawcomponent.hpp  healthcomponent.hpp
include/audio/: gameaudio.hpp
include/character/: gamecharacter.hpp  gamemaincharacter.hpp
include/exception/: exception.hpp
include/fps/: gamefps.hpp
include/menu/: gamemainmenu.hpp  gamesettingsmenu.hpp
include/savemanager/: gamesavemanager.hpp
include/texture/: gametexture.hpp
include/window/: gamewindow.hpp
src/: main.cpp
src/actor/: actor.cpp  actorcamera.cpp  actorcharacter.cpp  actorscenario.cpp  cameraactor.cpp  combatcomponent.cpp  controllercomponent.cpp  drawcomponent.cpp  healthcomponent.cpp
src/audio/: gameaudio.cpp
src/character/: gamecharacter.cpp  gamemaincharacter.cpp
src/fps/: gamefps.cpp
src/menu/: gamemainmenu.cpp  gamesettingsmenu.cpp
src/savemanager/: gamesavemanager.cpp
src/texture/: gametexture.cpp
src/window/: gamewindow.cpp
utility/: CMakeLists.txt  paths.hpp  sdldeleters.hpp
utility/debuglogger/: logger.cpp  logger.hpp  main.cpp
utility/debugprint/: debugprint.cpp  debugprint.hpp
